Edit profile new editable mode ,update profile api with image integration

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -59,8 +59,11 @@
                         android:id="@+id/fEPEdtEmail"
                         android:inputType="textEmailAddress|textNoSuggestions"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/dp_5"
-                        android:textSize="@dimen/sp_16"
+                        android:paddingTop="@dimen/dp_4"
+                        android:paddingBottom="@dimen/dp_4"
+                        android:paddingLeft="@dimen/dp_2"
+                        android:paddingRight="@dimen/dp_2"
+                        android:textSize="@dimen/sp_14"
                         android:hint="@string/str_email"
                         android:textStyle="bold|italic"
                         android:textColor="@android:color/white"
@@ -116,8 +119,11 @@
                     android:id="@+id/fEPEdtname"
                     android:layout_height="wrap_content"
                     android:inputType="text|textNoSuggestions"
-                    android:padding="@dimen/dp_5"
-                    android:textSize="@dimen/sp_16"
+                    android:paddingTop="@dimen/dp_4"
+                    android:paddingBottom="@dimen/dp_4"
+                    android:paddingLeft="@dimen/dp_2"
+                    android:paddingRight="@dimen/dp_2"
+                    android:textSize="@dimen/sp_14"
                     android:textStyle="bold|italic"
                     android:hint="@string/hint_user"
                     android:textColorHint="@android:color/white"
@@ -145,6 +151,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/linearOldPass"
                 android:layout_marginLeft="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_20"
@@ -173,8 +180,11 @@
                         android:id="@+id/fEPEdtPassword"
                         android:inputType="textWebPassword|textNoSuggestions"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/dp_5"
-                        android:textSize="@dimen/sp_16"
+                        android:paddingTop="@dimen/dp_4"
+                        android:paddingBottom="@dimen/dp_4"
+                        android:paddingLeft="@dimen/dp_2"
+                        android:paddingRight="@dimen/dp_2"
+                        android:textSize="@dimen/sp_14"
                         android:hint="@string/str_password"
                         android:textStyle="bold|italic"
                         android:textColorHint="@android:color/white"
@@ -231,7 +241,7 @@
                         android:inputType="textWebPassword|textNoSuggestions"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/dp_5"
-                        android:textSize="@dimen/sp_16"
+                        android:textSize="@dimen/sp_14"
                         android:hint="@string/hint_new_password"
                         android:textStyle="bold|italic"
                         android:textColorHint="@android:color/white"
@@ -291,7 +301,7 @@
                         android:layout_height="wrap_content"
                         android:padding="@dimen/dp_5"
                         android:hint="@string/hint_confirm_new_password"
-                        android:textSize="@dimen/sp_16"
+                        android:textSize="@dimen/sp_14"
                         android:textStyle="bold|italic"
                         android:textColorHint="@android:color/white"
                         android:textColor="@android:color/white"
@@ -350,9 +360,12 @@
                         android:id="@+id/fEPEdtPhone"
                         android:inputType="phone|textNoSuggestions"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/dp_5"
+                        android:paddingTop="@dimen/dp_4"
+                        android:paddingBottom="@dimen/dp_4"
+                        android:paddingLeft="@dimen/dp_2"
+                        android:paddingRight="@dimen/dp_2"
                         android:hint="@string/str_Number"
-                        android:textSize="@dimen/sp_16"
+                        android:textSize="@dimen/sp_14"
                         android:textStyle="bold|italic"
                         android:textColorHint="@android:color/white"
                         android:textColor="@android:color/white"
