--- a/app/src/main/res/layout/activity_book_service.xml
+++ b/app/src/main/res/layout/activity_book_service.xml
@@ -5,7 +5,6 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:fitsSystemWindows="false"
     tools:openDrawer="start">
 
@@ -23,6 +22,7 @@
         android:fitsSystemWindows="true"
         app:itemTextColor="@android:color/white"
         app:headerLayout="@layout/nav_header_book_service"
+        app:itemIconTint="@android:color/white"
         app:menu="@menu/activity_book_service_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
