--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -143,7 +143,7 @@
                     android:textSize="@dimen/sp_12"
                     android:padding="@dimen/dp_4"
                     android:layout_weight=".05"
-                    android:textColor="@android:color/holo_blue_light"
+                    android:textColor="@android:color/white"
                      />
       </LinearLayout>
 
@@ -204,7 +204,7 @@
                     android:textSize="@dimen/sp_12"
                     android:padding="@dimen/dp_4"
                     android:layout_weight=".15"
-                    android:textColor="@android:color/holo_blue_light"
+                    android:textColor="@android:color/white"
                     />
             </LinearLayout>
             <LinearLayout
@@ -383,7 +383,7 @@
                     android:padding="@dimen/dp_4"
                     android:gravity="center"
                     android:layout_weight=".15"
-                    android:textColor="@android:color/holo_blue_light"
+                    android:textColor="@android:color/white"
                     />
             </LinearLayout>
 
