--- a/app/src/main/res/layout/fragment_forgotpass.xml
+++ b/app/src/main/res/layout/fragment_forgotpass.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dp_20"/>
+        android:src="@drawable/logo_rush"
+        android:layout_marginTop="@dimen/dp_10"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
