--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -24,5 +24,14 @@
          />
 
 
+     <ImageView
+         android:id="@+id/imgLogo"
+         android:layout_width="60dp"
+         android:layout_height="?attr/actionBarSize"
+         android:layout_marginRight="@dimen/dp_5"
+         android:visibility="gone"
+         android:layout_gravity="right|center_vertical"
+         android:background="@drawable/logo_rush"/>
+
 
 </android.support.v7.widget.Toolbar>
